# pico_debug

./: CMakeLists.txt  pico_debug.c  readme.md
lib/: CMakeLists.txt  scd4x_i2c.c  sensirion_i2c_hal.c
lib/DHT22/: CMakeLists.txt
